--- a/CardGames/en.lproj/MainStoryboard_iPad.storyboard
+++ b/CardGames/en.lproj/MainStoryboard_iPad.storyboard
@@ -421,9 +421,6 @@
                                     <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yWs-76-hOf" userLabel="Player1DeviceInner">
                                         <subviews>
                                             <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="left" text="Player 1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="xq1-YU-AY7">
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="128" id="Pa3-FN-cmH"/>
-                                                </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
@@ -435,9 +432,9 @@
                                             <constraint firstItem="xq1-YU-AY7" firstAttribute="top" secondItem="yWs-76-hOf" secondAttribute="top" constant="20" symbolic="YES" type="default" id="7Vo-Mc-qnp"/>
                                             <constraint firstItem="xq1-YU-AY7" firstAttribute="leading" secondItem="yWs-76-hOf" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="YTU-y7-I7r"/>
                                             <constraint firstAttribute="bottom" secondItem="xq1-YU-AY7" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="deE-ZL-5J4"/>
-                                            <constraint firstItem="fiu-qW-ZiY" firstAttribute="leading" secondItem="yWs-76-hOf" secondAttribute="leading" constant="127" id="kiY-SQ-egK"/>
+                                            <constraint firstItem="fiu-qW-ZiY" firstAttribute="centerY" secondItem="xq1-YU-AY7" secondAttribute="centerY" type="default" id="kzT-ho-4IN"/>
                                             <constraint firstAttribute="trailing" secondItem="xq1-YU-AY7" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="rEE-CE-9Yc"/>
-                                            <constraint firstItem="fiu-qW-ZiY" firstAttribute="top" secondItem="yWs-76-hOf" secondAttribute="top" constant="75" id="vno-x1-J8X"/>
+                                            <constraint firstItem="fiu-qW-ZiY" firstAttribute="centerX" secondItem="xq1-YU-AY7" secondAttribute="centerX" type="default" id="taN-B7-Iuj"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -445,6 +442,7 @@
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="yWs-76-hOf" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="A55-Re-T8r"/>
                                     <constraint firstItem="yWs-76-hOf" firstAttribute="leading" secondItem="fab-vT-lgK" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="ENS-AL-00n"/>
+                                    <constraint firstAttribute="bottom" secondItem="yWs-76-hOf" secondAttribute="bottom" constant="19" id="OOB-P3-8J0"/>
                                     <constraint firstItem="yWs-76-hOf" firstAttribute="top" secondItem="fab-vT-lgK" secondAttribute="top" constant="21" id="Sh8-7G-XvX"/>
                                 </constraints>
                             </view>
@@ -491,8 +489,8 @@
                                         </subviews>
                                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
+                                            <constraint firstItem="6r1-XJ-tjT" firstAttribute="centerX" secondItem="EXQ-qz-RxX" secondAttribute="centerX" type="default" id="6Lu-Uw-uUZ"/>
                                             <constraint firstAttribute="trailing" secondItem="EXQ-qz-RxX" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="AWa-wW-9nB"/>
-                                            <constraint firstItem="6r1-XJ-tjT" firstAttribute="leading" secondItem="Re8-hk-TRk" secondAttribute="leading" constant="127" id="WM5-dI-Dsx"/>
                                             <constraint firstAttribute="bottom" secondItem="EXQ-qz-RxX" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="YIh-ly-nnj"/>
                                             <constraint firstItem="EXQ-qz-RxX" firstAttribute="leading" secondItem="Re8-hk-TRk" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="bN4-KI-BZ9"/>
                                             <constraint firstItem="EXQ-qz-RxX" firstAttribute="top" secondItem="Re8-hk-TRk" secondAttribute="top" constant="20" symbolic="YES" type="default" id="eMn-G1-I3z"/>
